# MobileGame

./: README.md  docker-compose.yml
deploy/: docker-compose.yml  nginx.conf
docs/: 00-ideation.md  01-concept-gameplay.md  02-economy-monetization.md  03-ux-ui-art-sound.md  04-tech-architecture.md  05-roadmap.md  06-analytics-kpis.md  07-risks-growth.md  DESIGN-EVOLUTION.md  PILOT-GUIDE.md
flutter_app/: README.md  pubspec.yaml
flutter_app/android/app/: build.gradle.kts
flutter_app/android/app/src/main/: AndroidManifest.xml
flutter_app/android/app/src/main/kotlin/com/example/echo_orbit/: MainActivity.kt
flutter_app/lib/: main.dart
flutter_app/lib/game/: echo_orbit_game.dart
flutter_app/lib/services/: api.dart  live.dart  music.dart  storage.dart
flutter_app/test/: widget_test.dart
flutter_app/tool/: ws_smoke.dart
flutter_app/web/: index.html
server/: Cargo.toml  Dockerfile
server/data/: store.json
server/src/: main.rs
web/: echo-orbit.html  index.html  loop-garden.html  sky-stack.html  tidal.html
web/guide/: index.html
web/play/: .last_build_id  flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.js  manifest.json  version.json
web/play/assets/: AssetManifest.bin.json  AssetManifest.json  NOTICES
