[package]
name = "echo-orbit-server"
version = "0.1.0"
edition = "2021"
description = "ECHO ORBIT backend: anonymous auth, cloud save, leaderboards, remote config"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
rand = "0.8"

[profile.release]
lto = true
